--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="nav-bar w-nav">
     <div class="container-nav w-container">
       <nav role="navigation" class="w-nav-menu">
-        <a href="#" class="nav-link w-nav-link">Home</a>
+        <a href="#" class="nav-link w-nav-link">Hom</a>
         <a href="#" class="nav-link w-nav-link">About</a>
         <a href="#" class="nav-link w-nav-link">Art</a>
         <a href="#" class="nav-link w-nav-link">Contact</a>
